# rearward

./: Cargo.toml  build.rs  ideas.md  makefile  todo.md
proto/: api.proto  apigrpc.proto  helloworld.proto
src/: api.rs  lib.rs  main.rs  service.rs
src/api/proto/: rearward.api.rs
tests/: test_rkv.rs
