[package]
name = "rust_grpc"
version = "0.1.0"
authors = ["sensa <person.sensa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic="0.1.0-alpha.3"
bytes="0.4"
prost="0.5"
prost-derive="0.5"

tokio = "=0.2.0-alpha.6"
#futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
#async-stream = "0.1.2"
#http = "0.1"
#tower = "=0.3.0-alpha.2"

[build-dependencies]
tonic-build="0.1.0-alpha.3"